tests/resources/errors/errors2.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn foo() | raises TestError {
    raise TestError{};
}

fn main() {
    try (foo());
}
